--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,1 +1,65 @@
-<footer class="footer"></footer>
+<footer class="footer container">
+  <div class="footer-wrapper">
+    <a href="/index.html" class="footer-logo"
+      ><svg width="84px" height="36px" class="footer-logo-icon">
+        <use href="/images/icons.svg#logo">href</use>
+      </svg></a
+    >
+    <p class="footer-subscribe-form-text">
+      Subscribe to our newsletter for the latest updates on our yoga courses and
+      events.
+    </p>
+    <form action="" class="footer-subscribe-form">
+      <input
+        type="email"
+        name="footer-user-email"
+        id="footer-user-email"
+        placeholder="Placeholder"
+        pattern="([A-z0-9_.-]{1,})@([A-z0-9_.-]{1,}).([A-z]{2,8})"
+        required
+      />
+      <!-- <p class="text-valid">Succes!</p>
+        <p class="text-invalid">Invalid email, try again</p> -->
+      <button type="submit" class="footer-subscribe-form-btn">Join</button>
+    </form>
+    <p class="footer-privacy">
+      By subscribing, you consent to our Privacy Policy and agree to receive
+      updates.
+    </p>
+    <h3 class="footer-nav-header">Quick Links</h3>
+    <ul class="footer-nav">
+      <li class="footer-nav-item"><a href="#yoga-classes"></a>Yoga Classes</li>
+      <li class="footer-nav-item"><a href="#team"></a>Team</li>
+      <li class="footer-nav-item"><a href="#pricing"></a>Pricing</li>
+      <li class="footer-nav-item"><a href="#contacts"></a>Contacts</li>
+    </ul>
+    <h3 class="footer-socials-header">Connect With Us</h3>
+    <ul class="footer-socials">
+      <li class="footer-socials-item">
+        <svg class="footer-socials-item-icon">
+          <use href="/img/icons.svg#"></use>
+        </svg>
+        <p class="footer-socials-item-text">Facebook</p>
+      </li>
+      <li class="footer-socials-item">
+        <svg class="footer-socials-item-icon">
+          <use href="/img/icons.svg#"></use>
+        </svg>
+        <p class="footer-socials-item-text">Instagram</p>
+      </li>
+      <li class="footer-socials-item">
+        <svg class="footer-socials-item-icon">
+          <use href="/img/icons.svg#"></use>
+        </svg>
+        <p class="footer-socials-item-text">LinkedIn</p>
+      </li>
+      <li class="footer-socials-item">
+        <svg class="footer-socials-item-icon">
+          <use href="/img/icons.svg#"></use>
+        </svg>
+        <p class="footer-socials-item-text">YouTube</p>
+      </li>
+    </ul>
+    <p class="footer-copyright">© 2025 Yoga Studio. All rights reserved.</p>
+  </div>
+</footer>
