Created markup for the Our Team section

--- a/src/partials/team.html
+++ b/src/partials/team.html
@@ -1,1 +1,271 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="World leader in website development" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>YogaBloom</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
+      integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
 
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Corben&family=Sarabun:wght@400;500;600&display=swap"
+      rel="stylesheet"
+    />
+
+    <link rel="stylesheet" href="./css/styles.css" />
+  </head>
+  <body>
+    <main>
+      <section class="team">
+        <div class="container">
+          <p class="team-text">Meet</p>
+          <h2 class="team-title">Our Team</h2>
+          <p class="team-text">
+            Dedicated professionals passionate about yoga and wellness.
+          </p>
+          <ul class="team-list">
+            <li class="team-item">
+              <img
+                class="team-image"
+                srcset="
+                  /images/team/1x/LiamJohnson1x.jpg 1x,
+                  /images/team/2x/LiamJohnson2x.jpg 2x,
+                  /images/team/3x/LiamJohnson3x.jpg 3x
+                "
+                src="/images/team/1x/LiamJohnson1x.jpg"
+                alt="Liam Johnson"
+                width="421.33"
+                height="395"
+              />
+              <div class="team-card-content">
+                <h3 class="team-subtitle">Liam Johnson</h3>
+
+                <p class="team-text">Yoga Instructor</p>
+
+                <p class="team-text">
+                  Liam specializes in mindfulness and stress reduction
+                  techniques through guided meditation.
+                </p>
+
+                <ul class="team-list-icons">
+                  <li class="team-item-icons">
+                    <a class="team-soc-link" href="">
+                      <svg class="icon-soc" width="24" height="24">
+                        <use href="/images/icons.svg#icon-linkedIn"></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="team-item-icons">
+                    <a class="team-soc-link" href="">
+                      <svg class="icon-soc" width="24" height="24">
+                        <use href="/images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </li>
+
+            <li class="team-item">
+              <img
+                class="team-image"
+                srcset="
+            /images/team/1x/EmmaStone1x.jpg 1x,↩
+            /images/team/2x/EmmaStone2x.jpg 2x,↩
+            /images/team/3x/EmmaStone3x.jpg 3x↩
+          "
+                src="/images/team/1x/EmmaStone1x.jpg"
+                alt="Emma Stone"
+                width="421.33"
+                height="395"
+              />
+              <div class="team-card-content">
+                <h3 class="team-subtitle">Emma Ston</h3>
+
+                <p class="team-text">Meditation Coach</p>
+
+                <p class="team-text">
+                  Emma has over 10 years of experience in Hatha and Vinyasa
+                  yoga.
+                </p>
+
+                <ul class="team-list-icons">
+                  <li class="team-item-icons">
+                    <a class="team-soc-link" href="">
+                      <svg class="icon-soc" width="24" height="24">
+                        <use href="/images/icons.svg#icon-linkedIn"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li class="team-item">
+              <img
+                class="team-image"
+                srcset="
+            /images/team/1x/SophiaLee1x.jpg 1x,↩
+            /images/team/2x/SophiaLee2x.jpg 2x,↩
+            /images/team/3x/SophiaLee3x.jpg 3x↩
+          "
+                src="/images/team/1x/SophiaLee1x.jpg"
+                alt="Sophia Lee"
+                width="421.33"
+                height="395"
+              />
+              <div class="team-card-content">
+                <h3 class="team-subtitle">Sophia Lee</h3>
+
+                <p class="team-text">Pilates Trainer</p>
+
+                <p class="team-text">
+                  Sophia combines Pilates with yoga for a holistic fitness
+                  approach.
+                </p>
+
+                <ul class="team-list-icons">
+                  <li class="team-item-icons">
+                    <a class="team-soc-link" href="">
+                      <svg class="icon-soc" width="24" height="24">
+                        <use href="/images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li class="team-item">
+              <img
+                class="team-image"
+                srcset="
+            /images/team/1x/NoahBrown1x.jpg 1x,↩
+            /images/team/2x/NoahBrown2x.jpg 2x,↩
+            /images/team/3x/NoahBrown3x.jpg 3x↩
+          "
+                src="/images/team/1x/NoahBrown1x.jpg"
+                alt="Noah Brown"
+                width="421.33"
+                height="395"
+              />
+              <div class="team-card-content">
+                <h3 class="team-subtitle">Noah Brown</h3>
+
+                <p class="team-text">Yoga Therapist</p>
+
+                <p class="team-text">
+                  Noah focuses on therapeutic yoga to aid recovery and enhance
+                  well-being.
+                </p>
+
+                <ul class="team-list-icons">
+                  <li class="team-item-icons">
+                    <a class="team-soc-link" href="">
+                      <svg class="icon-soc" width="24" height="24">
+                        <use href="/images/icons.svg#icon-linkedIn"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li class="team-item">
+              <img
+                class="team-image"
+                srcset="
+            /images/team/1x/AvaGreen1x.jpg 1x,↩
+            /images/team/2x/AvaGreen2x.jpg 2x,↩
+            /images/team/3x/AvaGreen3x.jpg 3x↩
+          "
+                src="/images/team/1x/AvaGreen1x.jpg"
+                alt="Ava Green"
+                width="421.33"
+                height="395"
+              />
+              <div class="team-card-content">
+                <h3 class="team-subtitle">Ava Green</h3>
+
+                <p class="team-text">Fitness Trainer</p>
+
+                <p class="team-text">
+                  Ava integrates strength training with yoga to promote overall
+                  fitness.
+                </p>
+
+                <ul class="team-list-icons">
+                  <li class="team-item-icons">
+                    <a class="team-soc-link" href="">
+                      <svg class="icon-soc" width="24" height="24">
+                        <use href="/images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-item-icons">
+                    <a class="team-soc-link" href="">
+                      <svg class="icon-soc" width="24" height="24">
+                        <use href="/images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-item-icons">
+                    <a class="team-soc-link" href="">
+                      <svg class="icon-soc" width="24" height="24">
+                        <use href="/images/icons.svg#icon-linkedIn"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li class="team-item">
+              <img
+                class="team-image"
+                srcset="
+            /images/team/1x/ClarkThomas1x.jpg 1x,↩
+            /images/team/2x/ClarkThomas2x.jpg 2x,↩
+            /images/team/3x/ClarkThomas3x.jpg 3x↩
+          "
+                src="/images/team/1x/ClarkThomas1x.jpg"
+                alt="Clark Thomas"
+                width="421.33"
+                height="395"
+              />
+              <div class="team-card-content">
+                <h3 class="team-subtitle">Clark Thomas</h3>
+
+                <p class="team-text">Fitness Trainer</p>
+
+                <p class="team-text">
+                  Clark specializes in mindfulness and stress reduction
+                  techniques through guided meditation.
+                </p>
+                <li class="team-item-icons">
+                  <a class="team-soc-link" href="">
+                    <svg class="icon-soc" width="24" height="24">
+                      <use href="/images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-item-icons">
+                  <a class="team-soc-link" href="">
+                    <svg class="icon-soc" width="24" height="24">
+                      <use href="/images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+    </main>
+  </body>
+</html>
