--- a/src/partials/team.html
+++ b/src/partials/team.html
@@ -20,39 +20,55 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="/src/css/team.css" />
   </head>
   <body>
     <main>
       <section class="team">
         <div class="container">
-          <p class="team-text">Meet</p>
+          <h3 class="team-text-top">Meet</h3>
           <h2 class="team-title">Our Team</h2>
-          <p class="team-text">
+          <h4 class="team-text">
             Dedicated professionals passionate about yoga and wellness.
-          </p>
+          </h4>
           <ul class="team-list">
             <li class="team-item">
-              <img
-                class="team-image"
-                srcset="
-                  /images/team/1x/LiamJohnson1x.jpg 1x,
-                  /images/team/2x/LiamJohnson2x.jpg 2x,
-                  /images/team/3x/LiamJohnson3x.jpg 3x
-                "
-                src="/images/team/1x/LiamJohnson1x.jpg"
-                alt="Liam Johnson"
-                width="421.33"
-                height="395"
-              />
+              <picture>
+                <source
+                  media="(min-width: 1440px)"
+                  srcset="
+                    /images/team/desk/liamjohnson-desk1x.jpg 1x,
+                    /images/team/desk/liamjohnson-desk2x.jpg 2x
+                  "
+                />
+                <source
+                  media="(min-width: 768px)"
+                  srcset="
+                    /images/team/tab/liamjohnson-tab1x.jpg 1x,
+                    /images/team/tab/liamjohnson-tab2x.jpg 2x
+                  "
+                />
+                <source
+                  media="(max-width: 375px)"
+                  srcset="
+                    /images/team/mob/liamjohnson1x.jpg 1x,
+                    /images/team/mob/liamjohnson2x.jpg 2x
+                  "
+                />
+                <img
+                  src="/images/team/desk/liamjohnson-desk1x.jpg"
+                  alt="Liam Johnson"
+                  class="team-image"
+                />
+              </picture>
               <div class="team-card-content">
                 <h3 class="team-subtitle">Liam Johnson</h3>
 
-                <p class="team-text">Yoga Instructor</p>
+                <h4 class="team-text-name">Yoga Instructor</h4>
 
-                <p class="team-text">
-                  Liam specializes in mindfulness and stress reduction
-                  techniques through guided meditation.
+                <p class="team-text-p">
+                  Emma has over 10 years of experience in Hatha and Vinyasa
+                  yoga.
                 </p>
 
                 <ul class="team-list-icons">
@@ -76,26 +92,42 @@
             </li>
 
             <li class="team-item">
-              <img
-                class="team-image"
-                srcset="
-            /images/team/1x/EmmaStone1x.jpg 1x,↩
-            /images/team/2x/EmmaStone2x.jpg 2x,↩
-            /images/team/3x/EmmaStone3x.jpg 3x↩
-          "
-                src="/images/team/1x/EmmaStone1x.jpg"
-                alt="Emma Stone"
-                width="421.33"
-                height="395"
-              />
+              <picture>
+                <source
+                  media="(min-width: 1440px)"
+                  srcset="
+                    /images/team/desk/emmastone-desk1x.jpg 1x,
+                    /images/team/desk/emmastone-desk2x.jpg 2x
+                  "
+                />
+                <source
+                  media="(min-width: 768px)"
+                  srcset="
+                    /images/team/tab/emmastone-tab1x.jpg 1x,
+                    /images/team/tab/emmastone-tab2x.jpg 2x
+                  "
+                />
+                <source
+                  media="(max-width: 375px)"
+                  srcset="
+                    /images/team/mob/emmastone1x.jpg 1x,
+                    /images/team/mob/emmastone2x.jpg 2x
+                  "
+                />
+                <img
+                  src="/images/team/desk/emmastone-desk1x.jpg"
+                  alt="Emma Stone"
+                  class="team-image"
+                />
+              </picture>
               <div class="team-card-content">
                 <h3 class="team-subtitle">Emma Ston</h3>
 
-                <p class="team-text">Meditation Coach</p>
+                <h4 class="team-text-name">Meditation Coach</h4>
 
-                <p class="team-text">
-                  Emma has over 10 years of experience in Hatha and Vinyasa
-                  yoga.
+                <p class="team-text-p">
+                  Liam specializes in mindfulness and stress reduction
+                  techniques through guided meditation.
                 </p>
 
                 <ul class="team-list-icons">
@@ -110,24 +142,40 @@
               </div>
             </li>
             <li class="team-item">
-              <img
-                class="team-image"
-                srcset="
-            /images/team/1x/SophiaLee1x.jpg 1x,↩
-            /images/team/2x/SophiaLee2x.jpg 2x,↩
-            /images/team/3x/SophiaLee3x.jpg 3x↩
-          "
-                src="/images/team/1x/SophiaLee1x.jpg"
-                alt="Sophia Lee"
-                width="421.33"
-                height="395"
-              />
+              <picture>
+                <source
+                  media="(min-width: 1440px)"
+                  srcset="
+                    /images/team/desk/sophialee-desk1x.jpg 1x,
+                    /images/team/desk/sophialee-desk2x.jpg 2x
+                  "
+                />
+                <source
+                  media="(min-width: 768px)"
+                  srcset="
+                    /images/team/tab/sophialee-tab1x.jpg 1x,
+                    /images/team/tab/sophialee-tab2x.jpg 2x
+                  "
+                />
+                <source
+                  media="(max-width: 375px)"
+                  srcset="
+                    /images/team/mob/sophialee1x.jpg 1x,
+                    /images/team/mob/sophialee2x.jpg 2x
+                  "
+                />
+                <img
+                  src="/images/team/desk/sophialee-desk1x.jpg"
+                  alt="Emma Stone"
+                  class="team-image"
+                />
+              </picture>
               <div class="team-card-content">
                 <h3 class="team-subtitle">Sophia Lee</h3>
 
-                <p class="team-text">Pilates Trainer</p>
+                <h4 class="team-text-name">Pilates Trainer</h4>
 
-                <p class="team-text">
+                <p class="team-text-p">
                   Sophia combines Pilates with yoga for a holistic fitness
                   approach.
                 </p>
@@ -144,24 +192,40 @@
               </div>
             </li>
             <li class="team-item">
-              <img
-                class="team-image"
-                srcset="
-            /images/team/1x/NoahBrown1x.jpg 1x,↩
-            /images/team/2x/NoahBrown2x.jpg 2x,↩
-            /images/team/3x/NoahBrown3x.jpg 3x↩
-          "
-                src="/images/team/1x/NoahBrown1x.jpg"
-                alt="Noah Brown"
-                width="421.33"
-                height="395"
-              />
+              <picture>
+                <source
+                  media="(min-width: 1440px)"
+                  srcset="
+                    /images/team/desk/noahbrown-desk1x.jpg 1x,
+                    /images/team/desk/noahbrown-desk2x.jpg 2x
+                  "
+                />
+                <source
+                  media="(min-width: 768px)"
+                  srcset="
+                    /images/team/tab/noahbrown-tab1x.jpg 1x,
+                    /images/team/tab/noahbrown-tab2x.jpg 2x
+                  "
+                />
+                <source
+                  media="(max-width: 375px)"
+                  srcset="
+                    /images/team/mob/noahbrown1x.jpg 1x,
+                    /images/team/mob/noahbrown2x.jpg 2x
+                  "
+                />
+                <img
+                  src="/images/team/desk/noahbrown-desk1x.jpg"
+                  alt="Emma Stone"
+                  class="team-image"
+                />
+              </picture>
               <div class="team-card-content">
                 <h3 class="team-subtitle">Noah Brown</h3>
 
-                <p class="team-text">Yoga Therapist</p>
+                <h4 class="team-text-name">Yoga Therapist</h4>
 
-                <p class="team-text">
+                <p class="team-text-p">
                   Noah focuses on therapeutic yoga to aid recovery and enhance
                   well-being.
                 </p>
@@ -178,24 +242,40 @@
               </div>
             </li>
             <li class="team-item">
-              <img
-                class="team-image"
-                srcset="
-            /images/team/1x/AvaGreen1x.jpg 1x,↩
-            /images/team/2x/AvaGreen2x.jpg 2x,↩
-            /images/team/3x/AvaGreen3x.jpg 3x↩
-          "
-                src="/images/team/1x/AvaGreen1x.jpg"
-                alt="Ava Green"
-                width="421.33"
-                height="395"
-              />
+              <picture>
+                <source
+                  media="(min-width: 1440px)"
+                  srcset="
+                    /images/team/desk/avagreen-desk1x.jpg 1x,
+                    /images/team/desk/avagreen-desk2x.jpg 2x
+                  "
+                />
+                <source
+                  media="(min-width: 768px)"
+                  srcset="
+                    /images/team/tab/avagreen-tab1x.jpg 1x,
+                    /images/team/tab/avagreen-tab2x.jpg 2x
+                  "
+                />
+                <source
+                  media="(max-width: 375px)"
+                  srcset="
+                    /images/team/mob/avagreen1x.jpg 1x,
+                    /images/team/mob/avagreen2x.jpg 2x
+                  "
+                />
+                <img
+                  src="/images/team/desk/avagreen-desk1x.jpg"
+                  alt="Emma Stone"
+                  class="team-image"
+                />
+              </picture>
               <div class="team-card-content">
                 <h3 class="team-subtitle">Ava Green</h3>
 
-                <p class="team-text">Fitness Trainer</p>
+                <h4 class="team-text-name">Fitness Trainer</h4>
 
-                <p class="team-text">
+                <p class="team-text-p">
                   Ava integrates strength training with yoga to promote overall
                   fitness.
                 </p>
@@ -226,41 +306,59 @@
               </div>
             </li>
             <li class="team-item">
-              <img
-                class="team-image"
-                srcset="
-            /images/team/1x/ClarkThomas1x.jpg 1x,↩
-            /images/team/2x/ClarkThomas2x.jpg 2x,↩
-            /images/team/3x/ClarkThomas3x.jpg 3x↩
-          "
-                src="/images/team/1x/ClarkThomas1x.jpg"
-                alt="Clark Thomas"
-                width="421.33"
-                height="395"
-              />
+              <picture>
+                <source
+                  media="(min-width: 1440px)"
+                  srcset="
+                    /images/team/desk/clarkthomas-desk1x.jpg 1x,
+                    /images/team/desk/clarkthomas-desk2x.jpg 2x
+                  "
+                />
+                <source
+                  media="(min-width: 768px)"
+                  srcset="
+                    /images/team/tab/clarkthomas-tab1x.jpg 1x,
+                    /images/team/tab/clarkthomas-tab2x.jpg 2x
+                  "
+                />
+                <source
+                  media="(max-width: 375px)"
+                  srcset="
+                    /images/team/mob/clarkthomas1x.jpg 1x,
+                    /images/team/mob/clarkthomas2x.jpg 2x
+                  "
+                />
+                <img
+                  src="/images/team/desk/clarkthomas-desk1x.jpg"
+                  alt="Emma Stone"
+                  class="team-image"
+                />
+              </picture>
               <div class="team-card-content">
                 <h3 class="team-subtitle">Clark Thomas</h3>
 
-                <p class="team-text">Fitness Trainer</p>
+                <h4 class="team-text-name">Fitness Trainer</h4>
 
-                <p class="team-text">
+                <p class="team-text-p">
                   Clark specializes in mindfulness and stress reduction
                   techniques through guided meditation.
                 </p>
-                <li class="team-item-icons">
-                  <a class="team-soc-link" href="">
-                    <svg class="icon-soc" width="24" height="24">
-                      <use href="/images/icons.svg#icon-facebook"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="team-item-icons">
-                  <a class="team-soc-link" href="">
-                    <svg class="icon-soc" width="24" height="24">
-                      <use href="/images/icons.svg#icon-instagram"></use>
-                    </svg>
-                  </a>
-                </li>
+                <ul class="team-list-icons">
+                  <li class="team-item-icons">
+                    <a class="team-soc-link" href="">
+                      <svg class="icon-soc" width="24" height="24">
+                        <use href="/images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-item-icons">
+                    <a class="team-soc-link" href="">
+                      <svg class="icon-soc" width="24" height="24">
+                        <use href="/images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
