--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,1 +1,182 @@
-
+<section class="gallery" id="mainpage-section-gallery">
+    <div class="container">
+        <div class="gallery_wrap">
+            <h3 class="gallery_menu">Breathe in the Space</h3>
+            <p class="gallery_text">
+                Step inside YogaBloom and feel the calm. Explore our serene studio and
+                the peaceful moments our community shares during each session.
+            </p>
+        </div>
+        <ul class="gallery_list">
+            <li class="gallery_item">
+                <picture>
+                    <source srcset="
+                     /public/gallery/DesktopImage1.jpg  1x,
+                     /public/gallery/DesktopImage7.jpg  2x
+            " 
+             media="(min-width: 1336px)" 
+            />
+                    <source srcset="
+                     /public/gallery/TabletImages1.jpg  1x,
+                     /public/gallery/TabletImages7.jpg  2x
+            " 
+             media="(min-width: 768px)" 
+            />
+                    <source srcset="
+                    /public/gallery/PhoneImages1.jpg    1x,
+                    /public/gallery/PhoneImages7.jpg    2x
+            " 
+             media="(max-width: 767px)" 
+            />
+                <img src="/public/gallery/PhoneImages1.jpg" 
+                    alt="Low Lunge Pose" 
+                    class="gallery_image" 
+                    width="421"
+                    height="448" 
+                />
+                </picture>
+            </li>
+            <li class="gallery_item">
+                <picture>
+                    <source srcset="
+                     /public/gallery/DesktopImage2.jpg  1x,
+                     /public/gallery/DesktopImage8.jpg  2x
+            " media="(min-width: 1336px)" />
+                    <source srcset="
+                     /public/gallery/TabletImages2.jpg  1x,
+                     /public/gallery/TabletImages8.jpg  2x
+            " media="(min-width: 768px)" />
+                    <source srcset="
+                     /public/gallery/PhoneImages2.jpg    1x,
+                     /public/gallery/PhoneImages8.jpg    2x
+            " 
+             media="(max-width: 767px)" 
+            />
+                <img 
+                    src="/public/gallery/PhoneImages2.jpg" 
+                    alt="Easy Pose" 
+                    class="gallery_image" 
+                    width="421"
+                    height="448" 
+                />
+                </picture>
+            </li>
+            <li class="gallery_item">
+                <picture>
+                    <source srcset="
+                     /public/gallery/DesktopImage3.jpg  1x,
+                     /public/gallery/DesktopImage9.jpg  2x
+            " 
+             media="(min-width: 1336px)" 
+            />
+                    <source srcset="
+                     /public/gallery/TabletImages3.jpg  1x,
+                     /public/gallery/TabletImages9.jpg  2x
+            " 
+             media="(min-width: 768px)" 
+            />
+                    <source srcset="
+                     /public/gallery/PhoneImages3.jpg    1x,
+                     /public/gallery/PhoneImages9.jpg    2x
+            " 
+             media="(max-width: 767px)" 
+            />
+                <img 
+                    src="/public/gallery/PhoneImages3.jpg" 
+                    alt="Fitness center" 
+                    class="gallery_image" 
+                    width="421"
+                    height="448" 
+                />
+                </picture>
+            </li>
+            <li class="gallery_item">
+                <picture>
+                    <source srcset="
+                     /public/gallery/DesktopImage4.jpg  1x,
+                     /public/gallery/DesktopImage10.jpg  2x
+            " 
+             media="(min-width: 1336px)" 
+            />
+                    <source srcset="
+                     /public/gallery/TabletImages4.jpg    1x,
+                     /public/gallery/TabletImages10.jpg    2x
+            " 
+             media="(min-width: 768px)" 
+            />
+                    <source srcset="
+                     /public/gallery/PhoneImages4.jpg    1x,
+                     /public/gallery/PhoneImages10.jpg    2x
+            " 
+             media="(max-width: 767px)" 
+            />
+                <img 
+                    src="/public/gallery/PhoneImages4.jpg" 
+                    alt="Yoga studio" 
+                    class="gallery_image" 
+                    width="421"
+                    height="448" 
+                />
+                </picture>
+            </li>
+            <li class="gallery_item">
+                <picture>
+                    <source srcset="
+                     /public/gallery/DesktopImage5.jpg  1x,
+                     /public/gallery/DesktopImage11.jpg  2x
+            " 
+             media="(min-width: 1336px)" 
+            />
+                    <source srcset="
+                     /public/gallery/TabletImages5.jpg    1x,
+                     /public/gallery/TabletImages11.jpg    2x
+            " 
+             media="(min-width: 768px)" 
+            />
+                    <source srcset="
+                     /public/gallery/PhoneImages5.jpg    1x,
+                     /public/gallery/PhoneImages11.jpg    2x
+            " 
+             media="(max-width: 767px)" 
+            />
+                <img 
+                    src="/public/gallery/PhoneImages5.jpg" 
+                    alt="Reflection" 
+                    class="gallery_image"
+                    width="421"
+                    height="448" 
+                />
+                </picture>
+            </li>
+            <li class="gallery_item">
+                <picture>
+                    <source srcset="
+                    /public/gallery/DesktopImage6.jpg  1x,
+                     /public/gallery/DesktopImage12.jpg  2x
+            " 
+             media="(min-width: 1336px)" 
+            />
+                    <source srcset="
+                     /public/gallery/TabletImages6.jpg    1x,
+                     /public/gallery/TabletImages12.jpg    2x
+            " 
+             media="(min-width: 768px)" 
+            />
+                    <source srcset=" 
+                     /public/gallery/PhoneImages6.jpg    1x,
+                     /public/gallery/PhoneImages12.jpg    2x
+            " 
+             media="(max-width: 767px)" 
+            />
+                <img 
+                    src="/public/gallery/PhoneImages6.jpg" 
+                    alt="Stillness" 
+                    class="gallery_image" 
+                    width="421"
+                    height="448" 
+                />
+                </picture>
+            </li>
+        </ul>
+    </div>
+</section>
