--- a/src/partials/team.html
+++ b/src/partials/team.html
@@ -1,1 +1,369 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="World leader in website development" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>YogaBloom</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
+      integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
 
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Corben&family=Sarabun:wght@400;500;600&display=swap"
+      rel="stylesheet"
+    />
+
+    <link rel="stylesheet" href="/src/css/team.css" />
+  </head>
+  <body>
+    <main>
+      <section class="team">
+        <div class="container">
+          <h3 class="team-text-top">Meet</h3>
+          <h2 class="team-title">Our Team</h2>
+          <h4 class="team-text">
+            Dedicated professionals passionate about yoga and wellness.
+          </h4>
+          <ul class="team-list">
+            <li class="team-item">
+              <picture>
+                <source
+                  media="(min-width: 1440px)"
+                  srcset="
+                    /images/team/desk/liamjohnson-desk1x.jpg 1x,
+                    /images/team/desk/liamjohnson-desk2x.jpg 2x
+                  "
+                />
+                <source
+                  media="(min-width: 768px)"
+                  srcset="
+                    /images/team/tab/liamjohnson-tab1x.jpg 1x,
+                    /images/team/tab/liamjohnson-tab2x.jpg 2x
+                  "
+                />
+                <source
+                  media="(max-width: 375px)"
+                  srcset="
+                    /images/team/mob/liamjohnson1x.jpg 1x,
+                    /images/team/mob/liamjohnson2x.jpg 2x
+                  "
+                />
+                <img
+                  src="/images/team/desk/liamjohnson-desk1x.jpg"
+                  alt="Liam Johnson"
+                  class="team-image"
+                />
+              </picture>
+              <div class="team-card-content">
+                <h3 class="team-subtitle">Liam Johnson</h3>
+
+                <h4 class="team-text-name">Yoga Instructor</h4>
+
+                <p class="team-text-p">
+                  Emma has over 10 years of experience in Hatha and Vinyasa
+                  yoga.
+                </p>
+
+                <ul class="team-list-icons">
+                  <li class="team-item-icons">
+                    <a class="team-soc-link" href="">
+                      <svg class="icon-soc" width="24" height="24">
+                        <use href="/images/icons.svg#icon-linkedIn"></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="team-item-icons">
+                    <a class="team-soc-link" href="">
+                      <svg class="icon-soc" width="24" height="24">
+                        <use href="/images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </li>
+
+            <li class="team-item">
+              <picture>
+                <source
+                  media="(min-width: 1440px)"
+                  srcset="
+                    /images/team/desk/emmastone-desk1x.jpg 1x,
+                    /images/team/desk/emmastone-desk2x.jpg 2x
+                  "
+                />
+                <source
+                  media="(min-width: 768px)"
+                  srcset="
+                    /images/team/tab/emmastone-tab1x.jpg 1x,
+                    /images/team/tab/emmastone-tab2x.jpg 2x
+                  "
+                />
+                <source
+                  media="(max-width: 375px)"
+                  srcset="
+                    /images/team/mob/emmastone1x.jpg 1x,
+                    /images/team/mob/emmastone2x.jpg 2x
+                  "
+                />
+                <img
+                  src="/images/team/desk/emmastone-desk1x.jpg"
+                  alt="Emma Stone"
+                  class="team-image"
+                />
+              </picture>
+              <div class="team-card-content">
+                <h3 class="team-subtitle">Emma Ston</h3>
+
+                <h4 class="team-text-name">Meditation Coach</h4>
+
+                <p class="team-text-p">
+                  Liam specializes in mindfulness and stress reduction
+                  techniques through guided meditation.
+                </p>
+
+                <ul class="team-list-icons">
+                  <li class="team-item-icons">
+                    <a class="team-soc-link" href="">
+                      <svg class="icon-soc" width="24" height="24">
+                        <use href="/images/icons.svg#icon-linkedIn"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li class="team-item">
+              <picture>
+                <source
+                  media="(min-width: 1440px)"
+                  srcset="
+                    /images/team/desk/sophialee-desk1x.jpg 1x,
+                    /images/team/desk/sophialee-desk2x.jpg 2x
+                  "
+                />
+                <source
+                  media="(min-width: 768px)"
+                  srcset="
+                    /images/team/tab/sophialee-tab1x.jpg 1x,
+                    /images/team/tab/sophialee-tab2x.jpg 2x
+                  "
+                />
+                <source
+                  media="(max-width: 375px)"
+                  srcset="
+                    /images/team/mob/sophialee1x.jpg 1x,
+                    /images/team/mob/sophialee2x.jpg 2x
+                  "
+                />
+                <img
+                  src="/images/team/desk/sophialee-desk1x.jpg"
+                  alt="Emma Stone"
+                  class="team-image"
+                />
+              </picture>
+              <div class="team-card-content">
+                <h3 class="team-subtitle">Sophia Lee</h3>
+
+                <h4 class="team-text-name">Pilates Trainer</h4>
+
+                <p class="team-text-p">
+                  Sophia combines Pilates with yoga for a holistic fitness
+                  approach.
+                </p>
+
+                <ul class="team-list-icons">
+                  <li class="team-item-icons">
+                    <a class="team-soc-link" href="">
+                      <svg class="icon-soc" width="24" height="24">
+                        <use href="/images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li class="team-item">
+              <picture>
+                <source
+                  media="(min-width: 1440px)"
+                  srcset="
+                    /images/team/desk/noahbrown-desk1x.jpg 1x,
+                    /images/team/desk/noahbrown-desk2x.jpg 2x
+                  "
+                />
+                <source
+                  media="(min-width: 768px)"
+                  srcset="
+                    /images/team/tab/noahbrown-tab1x.jpg 1x,
+                    /images/team/tab/noahbrown-tab2x.jpg 2x
+                  "
+                />
+                <source
+                  media="(max-width: 375px)"
+                  srcset="
+                    /images/team/mob/noahbrown1x.jpg 1x,
+                    /images/team/mob/noahbrown2x.jpg 2x
+                  "
+                />
+                <img
+                  src="/images/team/desk/noahbrown-desk1x.jpg"
+                  alt="Emma Stone"
+                  class="team-image"
+                />
+              </picture>
+              <div class="team-card-content">
+                <h3 class="team-subtitle">Noah Brown</h3>
+
+                <h4 class="team-text-name">Yoga Therapist</h4>
+
+                <p class="team-text-p">
+                  Noah focuses on therapeutic yoga to aid recovery and enhance
+                  well-being.
+                </p>
+
+                <ul class="team-list-icons">
+                  <li class="team-item-icons">
+                    <a class="team-soc-link" href="">
+                      <svg class="icon-soc" width="24" height="24">
+                        <use href="/images/icons.svg#icon-linkedIn"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li class="team-item">
+              <picture>
+                <source
+                  media="(min-width: 1440px)"
+                  srcset="
+                    /images/team/desk/avagreen-desk1x.jpg 1x,
+                    /images/team/desk/avagreen-desk2x.jpg 2x
+                  "
+                />
+                <source
+                  media="(min-width: 768px)"
+                  srcset="
+                    /images/team/tab/avagreen-tab1x.jpg 1x,
+                    /images/team/tab/avagreen-tab2x.jpg 2x
+                  "
+                />
+                <source
+                  media="(max-width: 375px)"
+                  srcset="
+                    /images/team/mob/avagreen1x.jpg 1x,
+                    /images/team/mob/avagreen2x.jpg 2x
+                  "
+                />
+                <img
+                  src="/images/team/desk/avagreen-desk1x.jpg"
+                  alt="Emma Stone"
+                  class="team-image"
+                />
+              </picture>
+              <div class="team-card-content">
+                <h3 class="team-subtitle">Ava Green</h3>
+
+                <h4 class="team-text-name">Fitness Trainer</h4>
+
+                <p class="team-text-p">
+                  Ava integrates strength training with yoga to promote overall
+                  fitness.
+                </p>
+
+                <ul class="team-list-icons">
+                  <li class="team-item-icons">
+                    <a class="team-soc-link" href="">
+                      <svg class="icon-soc" width="24" height="24">
+                        <use href="/images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-item-icons">
+                    <a class="team-soc-link" href="">
+                      <svg class="icon-soc" width="24" height="24">
+                        <use href="/images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-item-icons">
+                    <a class="team-soc-link" href="">
+                      <svg class="icon-soc" width="24" height="24">
+                        <use href="/images/icons.svg#icon-linkedIn"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li class="team-item">
+              <picture>
+                <source
+                  media="(min-width: 1440px)"
+                  srcset="
+                    /images/team/desk/clarkthomas-desk1x.jpg 1x,
+                    /images/team/desk/clarkthomas-desk2x.jpg 2x
+                  "
+                />
+                <source
+                  media="(min-width: 768px)"
+                  srcset="
+                    /images/team/tab/clarkthomas-tab1x.jpg 1x,
+                    /images/team/tab/clarkthomas-tab2x.jpg 2x
+                  "
+                />
+                <source
+                  media="(max-width: 375px)"
+                  srcset="
+                    /images/team/mob/clarkthomas1x.jpg 1x,
+                    /images/team/mob/clarkthomas2x.jpg 2x
+                  "
+                />
+                <img
+                  src="/images/team/desk/clarkthomas-desk1x.jpg"
+                  alt="Emma Stone"
+                  class="team-image"
+                />
+              </picture>
+              <div class="team-card-content">
+                <h3 class="team-subtitle">Clark Thomas</h3>
+
+                <h4 class="team-text-name">Fitness Trainer</h4>
+
+                <p class="team-text-p">
+                  Clark specializes in mindfulness and stress reduction
+                  techniques through guided meditation.
+                </p>
+                <ul class="team-list-icons">
+                  <li class="team-item-icons">
+                    <a class="team-soc-link" href="">
+                      <svg class="icon-soc" width="24" height="24">
+                        <use href="/images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-item-icons">
+                    <a class="team-soc-link" href="">
+                      <svg class="icon-soc" width="24" height="24">
+                        <use href="/images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+    </main>
+  </body>
+</html>
