--- a/src/partials/pricing.html
+++ b/src/partials/pricing.html
@@ -1,1 +1,105 @@
+<section class="pricing-plan">
+  <div class="container">
+    <p class="pricing-plan-subtitle">Affordable</p>
+    <h2 class="pricing-plan-title">Pricing Plans</h2>
+    <p class="pricing-plan-description">
+      Choose the perfect plan for your yoga journey.
+    </p>
+    <div class="pricing-tariff-plans">
+      <div class="pricing-card">
+        <h3 class="pricing-card-title">One Session</h3>
+        <p class="pricing-card-price">$10</p>
 
+        <ul class="pricing-card-list">
+          <li class="pricing-card-item">
+            <svg class="pricing-card-icon" width="24" height="24">
+              <use href=""></use>
+            </svg>
+            <span class="pricing-card-content">1 group session</span>
+          </li>
+          <li class="pricing-card-item">
+            <svg class="pricing-card-icon" width="24" height="24">
+              <use href=""></use>
+            </svg>
+            <span class="pricing-card-content"
+              >10% discount for next 2 Sessions</span
+            >
+          </li>
+          <li class="pricing-card-item">
+            <svg class="pricing-card-icon" width="24" height="24">
+              <use href=""></use>
+            </svg>
+            <span class="pricing-card-content">Community support group</span>
+          </li>
+        </ul>
+        <button class="button-join" type="button">Join</button>
+      </div>
+
+      <div class="pricing-card">
+        <h3 class="pricing-card-title">8 Sessions Package</h3>
+        <p class="pricing-card-price">$65</p>
+
+        <ul class="pricing-card-list">
+          <li class="pricing-card-item">
+            <svg class="pricing-card-icon" width="24" height="24">
+              <use href=""></use>
+            </svg>
+            <span class="pricing-card-content">6 Group Sessions</span>
+          </li>
+          <li class="pricing-card-item">
+            <svg class="pricing-card-icon" width="24" height="24">
+              <use href=""></use>
+            </svg>
+            <span class="pricing-card-content">2 Individual Sessions</span>
+          </li>
+          <li class="pricing-card-item">
+            <svg class="pricing-card-icon" width="24" height="24">
+              <use href=""></use>
+            </svg>
+            <span class="pricing-card-content">Community support group</span>
+          </li>
+        </ul>
+        <button class="button-join" type="button">Join</button>
+      </div>
+
+      <div class="pricing-card">
+        <h3 class="pricing-card-title">12 Sessions Package</h3>
+        <p class="pricing-card-price">$80</p>
+
+        <ul class="pricing-card-list">
+          <li class="pricing-card-item">
+            <svg class="pricing-card-icon" width="24" height="24">
+              <use href=""></use>
+            </svg>
+            <span class="pricing-card-content">8 Group Sessions</span>
+          </li>
+          <li class="pricing-card-item">
+            <svg class="pricing-card-icon" width="24" height="24">
+              <use href=""></use>
+            </svg>
+            <span class="pricing-card-content">4 Individual Sessions</span>
+          </li>
+          <li class="pricing-card-item">
+            <svg class="pricing-card-icon" width="24" height="24">
+              <use href=""></use>
+            </svg>
+            <span class="pricing-card-content">Monthly yoga challenges</span>
+          </li>
+          <li class="pricing-card-item">
+            <svg class="pricing-card-icon" width="24" height="24">
+              <use href=""></use>
+            </svg>
+            <span class="pricing-card-content">Exclusive member discounts</span>
+          </li>
+          <li class="pricing-card-item">
+            <svg class="pricing-card-icon" width="24" height="24">
+              <use href=""></use>
+            </svg>
+            <span class="pricing-card-content">Community support group</span>
+          </li>
+        </ul>
+        <button class="button-join" type="button">Join</button>
+      </div>
+    </div>
+  </div>
+</section>
