--- a/src/partials/team.html
+++ b/src/partials/team.html
@@ -12,11 +12,10 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Corben&family=Sarabun:wght@400;500;600&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400..700;1,400..700&family=Sarabun:wght@400;500;600&display=swap"
       rel="stylesheet"
     />
 
@@ -37,22 +36,22 @@
                 <source
                   media="(min-width: 1440px)"
                   srcset="
-                    /images/team/desk/liamjohnson-desk1x.jpg 1x,
-                    /images/team/desk/liamjohnson-desk2x.jpg 2x
+                    /src/images/team/desk/liamjohnson-desk1x.jpg 1x,
+                    /src/images/team/desk/liamjohnson-desk2x.jpg 2x
                   "
                 />
                 <source
                   media="(min-width: 768px)"
                   srcset="
-                    /images/team/tab/liamjohnson-tab1x.jpg 1x,
-                    /images/team/tab/liamjohnson-tab2x.jpg 2x
+                    /src/images/team/tab/liamjohnson-tab1x.jpg 1x,
+                    /src/images/team/tab/liamjohnson-tab2x.jpg 2x
                   "
                 />
                 <source
                   media="(max-width: 375px)"
                   srcset="
-                    /images/team/mob/liamjohnson1x.jpg 1x,
-                    /images/team/mob/liamjohnson2x.jpg 2x
+                    /src/images/team/mob/liamjohnson1x.jpg 1x,
+                    /src/images/team/mob/liamjohnson2x.jpg 2x
                   "
                 />
                 <img
@@ -73,17 +72,23 @@
 
                 <ul class="team-list-icons">
                   <li class="team-item-icons">
-                    <a class="team-soc-link" href="">
+                    <a
+                      class="team-soc-link"
+                      href="https://www.linkedin.com/school/goit-start-your-career-in-it/"
+                    >
                       <svg class="icon-soc" width="24" height="24">
-                        <use href="/images/icons.svg#icon-linkedIn"></use>
+                        <use href="/src/images/icons.svg#icon-linkedIn"></use>
                       </svg>
                     </a>
                   </li>
 
                   <li class="team-item-icons">
-                    <a class="team-soc-link" href="">
+                    <a
+                      class="team-soc-link"
+                      href="https://www.instagram.com/goitclub/"
+                    >
                       <svg class="icon-soc" width="24" height="24">
-                        <use href="/images/icons.svg#icon-instagram"></use>
+                        <use href="/src/images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
@@ -96,32 +101,32 @@
                 <source
                   media="(min-width: 1440px)"
                   srcset="
-                    /images/team/desk/emmastone-desk1x.jpg 1x,
-                    /images/team/desk/emmastone-desk2x.jpg 2x
+                    /src/images/team/desk/emmastone-desk1x.jpg 1x,
+                    /src/images/team/desk/emmastone-desk2x.jpg 2x
                   "
                 />
                 <source
                   media="(min-width: 768px)"
                   srcset="
-                    /images/team/tab/emmastone-tab1x.jpg 1x,
-                    /images/team/tab/emmastone-tab2x.jpg 2x
+                    /src/images/team/tab/emmastone-tab1x.jpg 1x,
+                    /src/images/team/tab/emmastone-tab2x.jpg 2x
                   "
                 />
                 <source
                   media="(max-width: 375px)"
                   srcset="
-                    /images/team/mob/emmastone1x.jpg 1x,
-                    /images/team/mob/emmastone2x.jpg 2x
+                    /src/images/team/mob/emmastone1x.jpg 1x,
+                    /src/images/team/mob/emmastone2x.jpg 2x
                   "
                 />
                 <img
-                  src="/images/team/desk/emmastone-desk1x.jpg"
+                  src="/src/images/team/desk/emmastone-desk1x.jpg"
                   alt="Emma Stone"
                   class="team-image"
                 />
               </picture>
               <div class="team-card-content">
-                <h3 class="team-subtitle">Emma Ston</h3>
+                <h3 class="team-subtitle">Emma Stone</h3>
 
                 <h4 class="team-text-name">Meditation Coach</h4>
 
@@ -132,9 +137,12 @@
 
                 <ul class="team-list-icons">
                   <li class="team-item-icons">
-                    <a class="team-soc-link" href="">
+                    <a
+                      class="team-soc-link"
+                      href="https://www.linkedin.com/school/goit-start-your-career-in-it/"
+                    >
                       <svg class="icon-soc" width="24" height="24">
-                        <use href="/images/icons.svg#icon-linkedIn"></use>
+                        <use href="/src/images/icons.svg#icon-linkedIn"></use>
                       </svg>
                     </a>
                   </li>
@@ -146,27 +154,27 @@
                 <source
                   media="(min-width: 1440px)"
                   srcset="
-                    /images/team/desk/sophialee-desk1x.jpg 1x,
-                    /images/team/desk/sophialee-desk2x.jpg 2x
+                    /src/images/team/desk/sophialee-desk1x.jpg 1x,
+                    /src/images/team/desk/sophialee-desk2x.jpg 2x
                   "
                 />
                 <source
                   media="(min-width: 768px)"
                   srcset="
-                    /images/team/tab/sophialee-tab1x.jpg 1x,
-                    /images/team/tab/sophialee-tab2x.jpg 2x
+                    /src/images/team/tab/sophialee-tab1x.jpg 1x,
+                    /src/images/team/tab/sophialee-tab2x.jpg 2x
                   "
                 />
                 <source
                   media="(max-width: 375px)"
                   srcset="
-                    /images/team/mob/sophialee1x.jpg 1x,
-                    /images/team/mob/sophialee2x.jpg 2x
+                    /src/images/team/mob/sophialee1x.jpg 1x,
+                    /src/images/team/mob/sophialee2x.jpg 2x
                   "
                 />
                 <img
-                  src="/images/team/desk/sophialee-desk1x.jpg"
-                  alt="Emma Stone"
+                  src="/src/images/team/desk/sophialee-desk1x.jpg"
+                  alt="Sophia Lee"
                   class="team-image"
                 />
               </picture>
@@ -182,9 +190,12 @@
 
                 <ul class="team-list-icons">
                   <li class="team-item-icons">
-                    <a class="team-soc-link" href="">
+                    <a
+                      class="team-soc-link"
+                      href="https://www.instagram.com/goitclub/"
+                    >
                       <svg class="icon-soc" width="24" height="24">
-                        <use href="/images/icons.svg#icon-instagram"></use>
+                        <use href="/src/images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
@@ -196,27 +207,27 @@
                 <source
                   media="(min-width: 1440px)"
                   srcset="
-                    /images/team/desk/noahbrown-desk1x.jpg 1x,
-                    /images/team/desk/noahbrown-desk2x.jpg 2x
+                    /src/images/team/desk/noahbrown-desk1x.jpg 1x,
+                    /src/images/team/desk/noahbrown-desk2x.jpg 2x
                   "
                 />
                 <source
                   media="(min-width: 768px)"
                   srcset="
-                    /images/team/tab/noahbrown-tab1x.jpg 1x,
-                    /images/team/tab/noahbrown-tab2x.jpg 2x
+                    /src/images/team/tab/noahbrown-tab1x.jpg 1x,
+                    /src/images/team/tab/noahbrown-tab2x.jpg 2x
                   "
                 />
                 <source
                   media="(max-width: 375px)"
                   srcset="
-                    /images/team/mob/noahbrown1x.jpg 1x,
-                    /images/team/mob/noahbrown2x.jpg 2x
+                    /src/images/team/mob/noahbrown1x.jpg 1x,
+                    /src/images/team/mob/noahbrown2x.jpg 2x
                   "
                 />
                 <img
-                  src="/images/team/desk/noahbrown-desk1x.jpg"
-                  alt="Emma Stone"
+                  src="/src/images/team/desk/noahbrown-desk1x.jpg"
+                  alt="Noah Brown"
                   class="team-image"
                 />
               </picture>
@@ -232,7 +243,10 @@
 
                 <ul class="team-list-icons">
                   <li class="team-item-icons">
-                    <a class="team-soc-link" href="">
+                    <a
+                      class="team-soc-link"
+                      href="https://www.linkedin.com/school/goit-start-your-career-in-it/"
+                    >
                       <svg class="icon-soc" width="24" height="24">
                         <use href="/images/icons.svg#icon-linkedIn"></use>
                       </svg>
@@ -246,27 +260,27 @@
                 <source
                   media="(min-width: 1440px)"
                   srcset="
-                    /images/team/desk/avagreen-desk1x.jpg 1x,
-                    /images/team/desk/avagreen-desk2x.jpg 2x
+                    /src/images/team/desk/avagreen-desk1x.jpg 1x,
+                    /src/images/team/desk/avagreen-desk2x.jpg 2x
                   "
                 />
                 <source
                   media="(min-width: 768px)"
                   srcset="
-                    /images/team/tab/avagreen-tab1x.jpg 1x,
-                    /images/team/tab/avagreen-tab2x.jpg 2x
+                    /src/images/team/tab/avagreen-tab1x.jpg 1x,
+                    /src/images/team/tab/avagreen-tab2x.jpg 2x
                   "
                 />
                 <source
                   media="(max-width: 375px)"
                   srcset="
-                    /images/team/mob/avagreen1x.jpg 1x,
-                    /images/team/mob/avagreen2x.jpg 2x
+                    /src/images/team/mob/avagreen1x.jpg 1x,
+                    /src/images/team/mob/avagreen2x.jpg 2x
                   "
                 />
                 <img
-                  src="/images/team/desk/avagreen-desk1x.jpg"
-                  alt="Emma Stone"
+                  src="/src/images/team/desk/avagreen-desk1x.jpg"
+                  alt="Ava Green"
                   class="team-image"
                 />
               </picture>
@@ -282,23 +296,32 @@
 
                 <ul class="team-list-icons">
                   <li class="team-item-icons">
-                    <a class="team-soc-link" href="">
+                    <a
+                      class="team-soc-link"
+                      href="https://www.facebook.com/goITclub/"
+                    >
                       <svg class="icon-soc" width="24" height="24">
-                        <use href="/images/icons.svg#icon-facebook"></use>
+                        <use href="/src/images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-item-icons">
-                    <a class="team-soc-link" href="">
+                    <a
+                      class="team-soc-link"
+                      href="https://www.instagram.com/goitclub/"
+                    >
                       <svg class="icon-soc" width="24" height="24">
-                        <use href="/images/icons.svg#icon-instagram"></use>
+                        <use href="/src/images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-item-icons">
-                    <a class="team-soc-link" href="">
+                    <a
+                      class="team-soc-link"
+                      href="https://www.linkedin.com/school/goit-start-your-career-in-it/"
+                    >
                       <svg class="icon-soc" width="24" height="24">
-                        <use href="/images/icons.svg#icon-linkedIn"></use>
+                        <use href="/src/images/icons.svg#icon-linkedIn"></use>
                       </svg>
                     </a>
                   </li>
@@ -310,27 +333,27 @@
                 <source
                   media="(min-width: 1440px)"
                   srcset="
-                    /images/team/desk/clarkthomas-desk1x.jpg 1x,
-                    /images/team/desk/clarkthomas-desk2x.jpg 2x
+                    /src/images/team/desk/clarkthomas-desk1x.jpg 1x,
+                    /src/images/team/desk/clarkthomas-desk2x.jpg 2x
                   "
                 />
                 <source
                   media="(min-width: 768px)"
                   srcset="
-                    /images/team/tab/clarkthomas-tab1x.jpg 1x,
-                    /images/team/tab/clarkthomas-tab2x.jpg 2x
+                    /src/images/team/tab/clarkthomas-tab1x.jpg 1x,
+                    /src/images/team/tab/clarkthomas-tab2x.jpg 2x
                   "
                 />
                 <source
                   media="(max-width: 375px)"
                   srcset="
-                    /images/team/mob/clarkthomas1x.jpg 1x,
-                    /images/team/mob/clarkthomas2x.jpg 2x
+                    /src/images/team/mob/clarkthomas1x.jpg 1x,
+                    /src/images/team/mob/clarkthomas2x.jpg 2x
                   "
                 />
                 <img
-                  src="/images/team/desk/clarkthomas-desk1x.jpg"
-                  alt="Emma Stone"
+                  src="/src/images/team/desk/clarkthomas-desk1x.jpg"
+                  alt="Clark Thomas"
                   class="team-image"
                 />
               </picture>
@@ -345,16 +368,22 @@
                 </p>
                 <ul class="team-list-icons">
                   <li class="team-item-icons">
-                    <a class="team-soc-link" href="">
+                    <a
+                      class="team-soc-link"
+                      href="https://www.facebook.com/goITclub/"
+                    >
                       <svg class="icon-soc" width="24" height="24">
-                        <use href="/images/icons.svg#icon-facebook"></use>
+                        <use href="/src/images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-item-icons">
-                    <a class="team-soc-link" href="">
+                    <a
+                      class="team-soc-link"
+                      href="https://www.instagram.com/goitclub/"
+                    >
                       <svg class="icon-soc" width="24" height="24">
-                        <use href="/images/icons.svg#icon-instagram"></use>
+                        <use href="/src/images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
